--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "City of Philadelphia <maps@phila.gov>",
   "scripts": {
     "build": "rollup -c rollup.config.js",
-    "dev": "yarn build -w",
+    "dev": "yarn build -w"
   },
   "main": "./dist/phila-vue-mapping.js",
   "dependencies": {
