--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "leaflet-measure": "https://github.com/CityOfPhiladelphia/leaflet-measure#b70886af342f19597dc2937d79d64bad6bab07c6",
     "leaflet-rotatedmarker": "^0.2.0",
     "leaflet-vector-icon": "https://github.com/CityOfPhiladelphia/leaflet-vector-icon#8419d4025be2c3acc26a1e66b6a1a1e95c340142",
+    "lodash": "^4.17.10",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.21.0",
     "proj4": "^2.4.4",
