--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rollup-analyzer-plugin": "^1.1.1",
     "rollup-plugin-buble": "^0.19.2",
     "rollup-plugin-commonjs": "^9.1.0",
+    "rollup-plugin-copy": "^0.2.3",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.2.0",
     "rollup-plugin-node-resolve": "^3.3.0",
