--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.10",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.21.0",
+    "phila-standards": "^1.0.0",
     "proj4": "^2.4.4",
     "vue": "^2.5.16",
     "vuex": "^3.0.1"
