--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-pro": "^5.4.2",
     "rollup": "^0.57.1",
     "rollup-analyzer-plugin": "^1.1.1",
     "rollup-plugin-buble": "^0.19.2",
