--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "blueimp-md5": "^2.10.0",
     "esri-leaflet": "2.1.4",
     "leaflet": "^1.3.1",
+    "leaflet-draw": "1.0.4",
     "leaflet-easybutton": "^2.2.2",
     "leaflet-measure": "https://github.com/CityOfPhiladelphia/leaflet-measure#b70886af342f19597dc2937d79d64bad6bab07c6",
     "leaflet-rotatedmarker": "^0.2.0",
