--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
   },
   "main": "./dist/phila-vue-mapping.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.8",
+    "@fortawesome/pro-light-svg-icons": "^5.5.0",
+    "@fortawesome/pro-regular-svg-icons": "^5.5.0",
+    "@fortawesome/pro-solid-svg-icons": "^5.5.0",
+    "@fortawesome/vue-fontawesome": "^0.1.2",
     "@turf/turf": "^5.1.6",
     "L-esri-WebMap": "https://github.com/CityOfPhiladelphia/L.esri.WebMap#5849bfa6248a886d8675eeff98fa9dff4949f12a",
     "Leaflet.vector-markers": "^0.0.6",
     "axios": "^0.18.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
     "blueimp-md5": "^2.10.0",
     "esri-leaflet": "2.1.4",
+    "jquery": "^3.3.1",
     "leaflet": "^1.3.1",
     "leaflet-easybutton": "^2.2.2",
     "leaflet-measure": "https://github.com/CityOfPhiladelphia/leaflet-measure#b70886af342f19597dc2937d79d64bad6bab07c6",
