--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "axios": "^0.18.0",
     "blueimp-md5": "^2.10.0",
     "esri-leaflet": "2.1.4",
+    "jquery": "^3.3.1",
     "leaflet": "^1.3.1",
-    "sdleafletdraw": "1.3.0",
     "leaflet-easybutton": "^2.2.2",
     "leaflet-measure": "https://github.com/CityOfPhiladelphia/leaflet-measure#b70886af342f19597dc2937d79d64bad6bab07c6",
     "leaflet-rotatedmarker": "^0.2.0",
@@ -25,6 +25,7 @@
     "moment": "^2.21.0",
     "phila-standards": "^1.0.0",
     "proj4": "^2.4.4",
+    "sdleafletdraw": "1.3.0",
     "vue": "^2.5.16",
     "vuex": "^3.0.1"
   },
