--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
     "blueimp-md5": "^2.10.0",
-    "esri-leaflet": "2.1.4",
+    "esri-leaflet": "^2.2.3",
     "jquery": "^3.3.1",
-    "leaflet": "^1.3.1",
+    "leaflet": "^1.4.0",
     "leaflet-easybutton": "^2.2.2",
     "leaflet-measure": "https://github.com/CityOfPhiladelphia/leaflet-measure#b70886af342f19597dc2937d79d64bad6bab07c6",
     "leaflet-rotatedmarker": "^0.2.0",
