removes some packages

--- a/package.json
+++ b/package.json
@@ -9,17 +9,15 @@
   },
   "main": "./dist/phila-vue-mapping.js",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.8",
-    "@fortawesome/pro-light-svg-icons": "^5.5.0",
-    "@fortawesome/pro-regular-svg-icons": "^5.5.0",
-    "@fortawesome/pro-solid-svg-icons": "^5.5.0",
-    "@fortawesome/vue-fontawesome": "^0.1.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/pro-light-svg-icons": "^5.6.3",
+    "@fortawesome/pro-regular-svg-icons": "^5.6.3",
+    "@fortawesome/pro-solid-svg-icons": "^5.6.3",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
     "@turf/turf": "^5.1.6",
     "L-esri-WebMap": "https://github.com/CityOfPhiladelphia/L.esri.WebMap#5849bfa6248a886d8675eeff98fa9dff4949f12a",
     "Leaflet.vector-markers": "^0.0.6",
     "axios": "^0.18.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-3": "^6.24.1",
     "blueimp-md5": "^2.10.0",
     "esri-leaflet": "^2.2.3",
     "jquery": "^3.3.1",
@@ -28,14 +26,13 @@
     "leaflet-measure": "https://github.com/CityOfPhiladelphia/leaflet-measure#b70886af342f19597dc2937d79d64bad6bab07c6",
     "leaflet-rotatedmarker": "^0.2.0",
     "leaflet-vector-icon": "https://github.com/CityOfPhiladelphia/leaflet-vector-icon#74a56f048bceccef9c945f752bbd0379ae9dc77c",
-    "lodash.debounce": "^4.0.8",
+    "lodash-es": "^4.17.11",
     "phila-standards": "^1.0.2",
     "proj4": "^2.5.0",
     "vue": "^2.5.22",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-pro": "^5.4.2",
     "rollup": "^0.67.3",
     "rollup-analyzer-plugin": "^1.1.1",
     "rollup-plugin-buble": "^0.19.2",
