--- a/package.json
+++ b/package.json
@@ -14,19 +14,18 @@
     "Leaflet.vector-markers": "^0.0.6",
     "axios": "^0.18.0",
     "blueimp-md5": "^2.10.0",
-    "esri-leaflet": "2.1.4",
+    "esri-leaflet": "^2.2.3",
     "jquery": "^3.3.1",
-    "leaflet": "^1.3.1",
+    "leaflet": "^1.4.0",
     "leaflet-easybutton": "^2.2.2",
     "leaflet-measure": "https://github.com/CityOfPhiladelphia/leaflet-measure#b70886af342f19597dc2937d79d64bad6bab07c6",
     "leaflet-rotatedmarker": "^0.2.0",
     "leaflet-vector-icon": "https://github.com/CityOfPhiladelphia/leaflet-vector-icon#74a56f048bceccef9c945f752bbd0379ae9dc77c",
     "lodash.debounce": "^4.0.8",
-    "moment": "^2.21.0",
-    "phila-standards": "^1.0.0",
-    "proj4": "^2.4.4",
+    "phila-standards": "^1.0.2",
+    "proj4": "^2.5.0",
     "sdleafletdraw": "1.3.0",
-    "vue": "^2.5.17",
+    "vue": "^2.5.22",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -42,7 +41,7 @@
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-vue": "^3.0.0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.22"
   },
   "publishConfig": {
     "access": "public"
