--- a/package.json
+++ b/package.json
@@ -1,18 +1,14 @@
 {
   "name": "@cityofphiladelphia/phila-vue-mapping",
-  "description": "A Vue.js component for data-rich web mapping",
+  "description": "A library of vue components for data-rich web mapping",
   "version": "1.0.13",
   "author": "City of Philadelphia <maps@phila.gov>",
   "scripts": {
-    "build": "rollup -c rollup.config.js",
-    "dev": "yarn build -w"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
-  "main": "./dist/phila-vue-mapping.js",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
-    "@fortawesome/pro-light-svg-icons": "^5.6.3",
-    "@fortawesome/pro-regular-svg-icons": "^5.6.3",
-    "@fortawesome/pro-solid-svg-icons": "^5.6.3",
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "@turf/turf": "^5.1.6",
     "L-esri-WebMap": "https://github.com/CityOfPhiladelphia/L.esri.WebMap#5849bfa6248a886d8675eeff98fa9dff4949f12a",
@@ -29,24 +25,23 @@
     "lodash-es": "^4.17.11",
     "phila-standards": "^1.0.2",
     "proj4": "^2.5.0",
-    "vue": "^2.6.3",
-    "vuex": "^3.1.0"
+    "vue": "2.5.22",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "rollup": "^0.67.3",
-    "rollup-analyzer-plugin": "^1.1.1",
-    "rollup-plugin-buble": "^0.19.2",
-    "rollup-plugin-commonjs": "^9.1.0",
-    "rollup-plugin-copy": "^0.2.3",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.2.0",
-    "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-uglify": "^3.0.0",
-    "rollup-plugin-vue": "^3.0.0",
-    "vue-template-compiler": "^2.6.3"
+    "@vue/cli-plugin-babel": "^3.0.5",
+    "@vue/cli-service": "^3.0.5",
+    "vue-template-compiler": "2.5.22",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
-  "publishConfig": {
-    "access": "public"
-  }
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
