uses new npm account in travis, renames npm package to @philly/vue-mapping

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cityofphiladelphia/phila-vue-mapping",
+  "name": "@philly/vue-mapping",
   "description": "A Vue.js component for data-rich web mapping",
   "version": "1.0.17",
   "author": "City of Philadelphia <maps@phila.gov>",
