--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "blueimp-md5": "^2.10.0",
     "esri-leaflet": "^2.2.3",
+    "esri-leaflet-legend": "https://github.com/ajrothwell/esri-leaflet-legend#f275e4bf4495931712fb11b4dd8b895129ce5308",
     "jquery": "^3.3.1",
     "leaflet": "^1.4.0",
     "leaflet-easybutton": "^2.2.2",
