--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "blueimp-md5": "^2.10.0",
     "esri-leaflet": "^2.2.3",
     "esri-leaflet-legend": "https://github.com/ajrothwell/esri-leaflet-legend#f275e4bf4495931712fb11b4dd8b895129ce5308",
+    "esri-leaflet-renderers": "^2.0.6",
     "jquery": "^3.3.1",
     "leaflet": "^1.4.0",
-    "leaflet-easybutton": "^2.2.2",
+    "leaflet-easybutton": "^2.3.0",
     "leaflet-measure": "https://github.com/CityOfPhiladelphia/leaflet-measure#b70886af342f19597dc2937d79d64bad6bab07c6",
     "leaflet-rotatedmarker": "^0.2.0",
     "leaflet-vector-icon": "https://github.com/CityOfPhiladelphia/leaflet-vector-icon#c37571e92c66ce0003f22058f2d246b31d3941a5",
