--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lodash-es": "^4.17.11",
     "phila-standards": "^1.0.2",
     "proj4": "^2.5.0",
-    "sdleafletdraw": "1.3.0",
+    "sdleafletdraw": "https://github.com/CityOfPhiladelphia/SDLeafletDraw#b825fd6bdfe84b0a01cc3872a8a3ece0f81fb900",
     "vue": "^2.6.9",
     "vuex": "^3.0.1"
   },
