--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "@turf/turf": "^5.1.6",
-    "L-esri-WebMap": "https://github.com/CityOfPhiladelphia/L.esri.WebMap#58f79b635f170e2477de8eab4a4623a90f276af9",
+    "L-esri-WebMap": "https://github.com/ajrothwell/esriWebMap#c9a00bd89f61771ac0251b74f1448ea7c00e1067",
     "Leaflet-PointInPolygon": "https://github.com/CityOfPhiladelphia/Leaflet.PointInPolygon#a0d410f69aacf5f9165c4d01ccffeed824ccaed8",
     "axios": "^0.19.0",
     "blueimp-md5": "^2.10.0",
-    "esri-leaflet": "^2.2.3",
+    "esri-leaflet": "^2.3.1",
     "esri-leaflet-legend": "https://github.com/CityOfPhiladelphia/esri-leaflet-legend#8d42cbc1ed71c630fd8f9c6795877b5f7498b49f",
-    "leaflet": "^1.4.0",
+    "leaflet": "^1.5.1",
     "leaflet-easybutton": "^2.3.0",
     "leaflet-measure": "https://github.com/CityOfPhiladelphia/leaflet-measure#b70886af342f19597dc2937d79d64bad6bab07c6",
     "leaflet-rotatedmarker": "^0.2.0",
