--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "lintFix": "vue-cli-service lint --fix"
   },
   "dependencies": {
+    "esriWebMap": "https://github.com/ajrothwell/esriWebMap#c9a00bd89f61771ac0251b74f1448ea7c00e1067",
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-regular-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "@turf/turf": "^5.1.6",
-    "L-esri-WebMap": "https://github.com/ajrothwell/esriWebMap#c9a00bd89f61771ac0251b74f1448ea7c00e1067",
     "Leaflet-PointInPolygon": "https://github.com/CityOfPhiladelphia/Leaflet.PointInPolygon#a0d410f69aacf5f9165c4d01ccffeed824ccaed8",
     "axios": "^0.19.0",
     "blueimp-md5": "^2.10.0",
