--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "@turf/turf": "^5.1.6",
-    "arcgis-to-geojson-utils": "^1.0.1",
-    "date-fns": "^2.6.0",
     "Leaflet-PointInPolygon": "https://github.com/CityOfPhiladelphia/Leaflet.PointInPolygon#a0d410f69aacf5f9165c4d01ccffeed824ccaed8",
+    "arcgis-to-geojson-utils": "^1.0.1",
     "axios": "^0.19.0",
     "blueimp-md5": "^2.10.0",
+    "date-fns": "^2.6.0",
     "esri-leaflet": "^2.3.1",
     "esri-leaflet-legend": "https://github.com/CityOfPhiladelphia/esri-leaflet-legend#8d42cbc1ed71c630fd8f9c6795877b5f7498b49f",
     "esri-leaflet-renderers": "^2.0.6",
@@ -42,6 +42,7 @@
     "@vue/cli-service": "^4.0.5",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
+    "babel-runtime": "^6.26.0",
     "eslint": "^6.5.1",
     "eslint-plugin-vue": "^5.2.3",
     "vue-template-compiler": "^2.6.9",
