adds new components

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "leaflet-rotatedmarker": "^0.2.0",
     "leaflet-vector-icon": "https://github.com/CityOfPhiladelphia/leaflet-vector-icon#c37571e92c66ce0003f22058f2d246b31d3941a5",
     "lodash-es": "^4.17.14",
+    "map-promisified": "^0.4.0",
     "mapbox-gl": "^1.6.1",
     "phila-standards": "^1.0.2",
     "proj4": "^2.6.0",
