changes for mapbox

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "date-fns": "^2.8.1",
     "esri-leaflet": "^2.3.1",
     "esri-leaflet-legend": "https://github.com/CityOfPhiladelphia/esri-leaflet-legend#8d42cbc1ed71c630fd8f9c6795877b5f7498b49f",
-    "esri-leaflet-renderers": "^2.0.6",
+    "esri-leaflet-renderers": "2.0.6",
     "leaflet": "1.5.1",
     "leaflet-easybutton": "^2.3.0",
     "leaflet-measure": "https://github.com/CityOfPhiladelphia/leaflet-measure#1dd982b2f9c78be2af5f497d9415e66cd3df6216",
