--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "lodash-es": "^4.17.14",
     "map-promisified": "^0.4.0",
     "mapbox-gl": "^1.6.1",
+    "mapbox-gl-draw": "^0.16.0",
     "phila-standards": "^1.0.2",
     "proj4": "^2.6.0",
     "sdleafletdraw": "https://github.com/CityOfPhiladelphia/SDLeafletDraw#a3e8e8a860e75d370e533247bd31dfd55e865a62",
