ran deyarn, had to run npm install to create a package-lock.json file

--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "engines": {
+    "yarn": "YARN NO LONGER USED - use npm instead."
+  }
 }
